# Shaxam

./: README.md  db.py  main.py  py_server.py  pyproject.toml  requirements.txt  shaxam.sqlite
electron-app/: package-lock.json  package.json  tailwind.config.js
electron-app/public/: electron.js  index.html
electron-app/src/: App.js
electron-app/src/components/: AlignmentChart.js.js  SpectogramChart.jsx
fingerprints/: db.json
src/: database.py  db_connection.py  generate_fingerprint.py  match.py  mic_record.py  plot.py  spotify_handler.py  youtube_handler.py
