[project]
name = "shaxam"
version = "0.1.0"
description = "Audio fingerprinting and identification app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "python-dotenv>=1.1.0",
    "scipy>=1.15.3",
    "sounddevice>=0.5.1",
    "seaborn>=0.13.2",
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "yt_dlp>=2025.5.22"
]
